--- a/recover-matrix-server/raise_matrix_server.yml
+++ b/recover-matrix-server/raise_matrix_server.yml
@@ -1,10 +1,7 @@
 ---
 - name: "Deploys a newly recovered server after DNS propagation, and removes the old subscription/server if it works."
   hosts: localhost
-  gather_facts: true
-
-#  vars_files:
-#    - roles/matrix-synapse/vars/workers.yml
+  gather_facts: false
 
   roles:
     - raise-matrix-server
