--- a/recover-matrix-server/roles/raise-matrix-server/tasks/main.yml
+++ b/recover-matrix-server/roles/raise-matrix-server/tasks/main.yml
@@ -5,7 +5,7 @@
 # Re-deploy the server then run a self-check
 - import_tasks: "{{ role_path }}/tasks/deploy_test_server.yml"
 
-# Delete subscription is self-check passes
+# Delete subscription if self-check passes
 - import_tasks: "{{ role_path }}/tasks/delete_subscription.yml"
 
 # Provision the remaining subscription again (is this even needed?)
