need member_id at this point!

--- a/recover-matrix-server/roles/raise-matrix-server/tasks/deploy_test_server.yml
+++ b/recover-matrix-server/roles/raise-matrix-server/tasks/deploy_test_server.yml
@@ -6,6 +6,38 @@
 
 #launch that motherfucker
 
+# should launch with only the 'setup-nginx-proxy' and 'start' tags, speeeeeed booooooooost!
+
+- name: Remove SSL disabling line from new extra vars file
+  lineinfile:
+    path: /tmp/{{ matrix_domain }}_new_extra_vars.json
+    create: no
+    state: absent
+    line: '  "matrix_ssl_retrieval_method": "none",'
+    mode: '0600'
+  when: lock_file_9.stat.exists == false
+
+- name: Include new extra_vars variable file
+  include_vars: "/tmp/urgin.xyz_new_extra_vars.json"
+
+- name: Update 'Deploy/Update a Server' job template
+  awx.awx.tower_job_template:
+    name: "{{ matrix_domain }} - 0 - Deploy/Update a Server"
+    description: "Creates a new matrix service with Spantaleev's playbooks"
+    extra_vars: "{{ lookup('file', '/tmp/{{ matrix_domain }}_new_extra_vars.json') }}"
+    job_type: run
+    job_tags: "setup-nginx-proxy,start"
+    inventory: "{{ member_id }}"
+    project: "{{ member_id }} - Matrix Docker Ansible Deploy"
+    playbook: setup.yml
+    credential: "{{ member_id }} - AWX SSH Key"
+    state: present
+    verbosity: 1
+    tower_host: "https://{{ awx_host }}"
+    tower_oauthtoken: "{{ awx_session_token.ansible_facts.tower_token.token }}"
+    validate_certs: yes
+  when: lock_file_9.stat.exists == false
+
 - name: Launch deploy job template on AWX
   awx.awx.tower_job_launch:
     job_template: "{{ matrix_domain }} - 0 - Deploy/Update a Server"
@@ -43,6 +75,24 @@
     tower_oauthtoken: "{{ awx_session_token.ansible_facts.tower_token.token }}"
     validate_certs: yes
   when: ( lock_file_9.stat.exists == false ) and ( skip_self_check == false )
+
+- name: Reset 'Deploy/Update a Server' job template
+  awx.awx.tower_job_template:
+    name: "{{ matrix_domain }} - 0 - Deploy/Update a Server"
+    description: "Creates a new matrix service with Spantaleev's playbooks"
+    extra_vars: "{{ lookup('file', '/tmp/{{ matrix_domain }}_new_extra_vars.json') }}"
+    job_type: run
+    job_tags: "setup-all,start"
+    inventory: "{{ member_id }}"
+    project: "{{ member_id }} - Matrix Docker Ansible Deploy"
+    playbook: setup.yml
+    credential: "{{ member_id }} - AWX SSH Key"
+    state: present
+    verbosity: 1
+    tower_host: "https://{{ awx_host }}"
+    tower_oauthtoken: "{{ awx_session_token.ansible_facts.tower_token.token }}"
+    validate_certs: yes
+  when: lock_file_9.stat.exists == false
 
 - name: Create lock_file_9
   file:
